# preFree-public

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build1.sh  check_setup.sh  clean_autotuning.sh  cuda.sh  run_autotuning.sh  run_performance_test.sh  test_statistic.sh
baselines/CSR5_cuda/: main.cu  results_csr5.csv  results_csr5_fp64.csv  run_csr5.sh  spmv
baselines/CSR5_cuda/detail/cuda/: common_cuda.h  csr5_spmv_cuda.h  format_cuda.h  utils_cuda.h
baselines/merge-spmv/: Makefile  _gpu_spmv_driver  gpu_spmv.cu  make_merge.sh  results_merge_fp64.csv  run_merge.sh
data/: delete_non_square.sh  download_all.sh  download_sample.sh  prepare_all_dataset.sh  prepare_sample_dataset.sh  unzip.sh
include/: PreFree.h  common.h  mmio.h
perf/: performance_results.csv  performance_results_2atomic.csv  performance_results_blockopt.csv  performance_results_dynamic_25666666.csv  performance_results_dynamic_vec_2.csv  performance_results_dynamic_vec_4_dynamic_thrd.csv  performance_results_dynamic_vec_8.csv
scripts/: config.yaml  profile_and_generate.py
scripts/templates/: preFreeSpMV_template.cu.j2
src/spmv_kernel/: cdSpMV.cu  csrAdaptive.cu  flat.cu  preFreeSpMV.cu
src_backup/: preFreeSpMV_backup.cu
stat/: Freescale1.csv  cit-Patents.csv  cnr-2000.csv  mouse_gene.csv  poisson3Db.csv  web-Google.csv  web-Stanford.csv
test/: statistic.cu  test_cdspmv.cpp
utilities/: mmio.cpp
